@@ -15,6 +15,9 @@
 import sys
 import os
 
+project_root = os.path.normpath(os.path.join(os.getcwd(),'../'))
+sys.path.append(project_root)
+
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
 # documentation root, use os.path.abspath to make it absolute, like shown here.
