@@ -1,2 +1,5 @@
+"""The shortstack command-line interface"""
+
 def run_cli():
+    """This is a placeholder for the shortstack cli"""
     print "This is the shortstack CLI!"
