@@ -1,5 +1,5 @@
 [tox]
-envlist=py26,py27,py33,py34,coverage
+envlist=py26,py27,py33,py34,coverage,pylint
 
 [testenv]
 deps=-rtest-requirements.txt
@@ -13,3 +13,6 @@ commands=nosetests
 commands = 
     nosetests --with-coverage --cover-package=shortstack
 
+[testenv:pylint]
+commands =
+    pylint shortstack --ignore=tests
